doctor properties modification
