# app/Http/Resources/DoctorResource.php
@@ -21,12 +21,15 @@ class DoctorResource extends JsonResource
         //         $query->whereIn('id',array($this->sub_specialities[0]->id));
         //    })->first();
         // }      
+        $countryCode = (substr( $this->phone_number, 0, 3) !='+20')? substr( $this->phone_number, 0, 4) :substr( $this->phone_number, 0, 3);
+        $phone_number = (substr( $this->phone_number, 0, 3) !='+20')? substr( $this->phone_number, 4) :substr( $this->phone_number, 3) ;
         return [
             "id" => $this->id,
             "full_name" => $this->full_name,
             "id_number" => $this->id_number,
             "birth_date" => $this->birth_date,
-            "phone_number" => $this->phone_number,
+            "phone_number" => $phone_number,
+            "country_code" => $countryCode,
             "email" => $this->email,
             "job_title" => $this->job_title,
             "thumbnail" => $this->thumbnail ,
@@ -38,13 +41,14 @@ class DoctorResource extends JsonResource
             "notification_status" => $this->notification_status,
             "online_status" => $this->online_status,
             "gender" => $this->gender,
-            "specialities"=>$this->specialities->map(function($sub){
-                return [
-                    'id'=>$sub->id,
-                    'name'=>$sub->name,
-                    'name_ar'=>$sub->name_ar
-                ];
-            }),
+            "speciality"=>$this->speciality?->name,
+            // "specialities"=>$this->specialities->map(function($sub){
+            //     return [
+            //         'id'=>$sub->id,
+            //         'name'=>$sub->name,
+            //         'name_ar'=>$sub->name_ar
+            //     ];
+            // }),
             'sub_specialities'=> $this->sub_specialities->map(function($sub){
                 return [
                     'id'=>$sub->id,
